Fix alignment with temperature properties

--- a/style.css
+++ b/style.css
@@ -126,17 +126,21 @@ form input[type=submit]:hover {
 }
 
 .feels-like {
-  grid-area: 3 / 1 / 4 / 2;
-  align-self: start;
+  grid-area: 2 / 1 / 3 / 2;
+  align-self: end;
 }
 
 .low-temp {
   grid-area: 3 / 1 / 4 / 2;
+  align-self: start;
+  padding-top: 20px;
 }
 
 .high-temp {
   grid-area: 3 / 1 / 4 / 2;
-  align-self: end;
+  justify-self: end;
+  align-self: start;
+  padding-top: 20px;
 }
 
 .humidity {
